--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Pistou.io
 header-img: img/header.jpg
 email: skowron.pierre@gmail.com
-description: "Write your site description here. It will be used as your sites meta description as well!"
+description: "Blog personnel de Pierre Skowron"
 baseurl: ""
 url: "http://pistou.io"
 
