--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ permalink: /:year-:month-:day-:title
 paginate: 5
 paginate_path: "/blog/:num/"
 
-gems: [jekyll-paginate, jekyll-feed, jemoji]
+gems: [jekyll-paginate, jekyll-feed, octopress-minify-html, jemoji]
 
 # Assets
 sass:
